Finish implementing single order edit in manage portal

--- a/app/assets/javascripts/spree/scripts.js.erb
+++ b/app/assets/javascripts/spree/scripts.js.erb
@@ -63,6 +63,11 @@ $("#desc-toggle").click(function(e){
 	e.preventDefault();
 	$(this).toggleClass('rotate').parent('.description').toggleClass('full');
 });
+
+$(".order-items-toggle").click(function(e){
+	e.preventDefault();
+	$(this).toggleClass('rotate').next('.order-items-cont').slideToggle(300);
+});
 /* -- */
 /* Accordion -*/
 	$(function() {
