--- a/app/views/spree/manage/orders/edit.html.erb
+++ b/app/views/spree/manage/orders/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="search-area layout2">
-	<a href="" class="cta-link">Back to all Orders</a>
+	<a href="<%= manage_orders_url %>" class="cta-link">Back to all Orders</a>
 	<div class="search-block">
 		<form id="search-form">
 			<input type="text" placeholder="Search by order#">
@@ -7,27 +7,26 @@
 		</form>
 	</div>
 </div>
-<div class="single-order-block">
-	<div class="search-block">
-		<div class="order-name">
-			W Hotel
+
+<%= form_for ([:manage, @order]),url: manage_order_url, method: "patch", html: { id: 'single-order-form' } do |order_form| %>
+	<div class="single-order-block">
+		<div class="search-block">
+			<div class="order-name">
+				<%= @customer.name %>
+			</div>
+			<div class="orders-nav">
+				<!-- <a href="#" class="nav-left"><i class="fa fa-chevron-left"></i></a> -->
+				<span class="order-id">Order #<%= @order.number %></span>
+				<!-- <a href="#" class="nav-right"><i class="fa fa-chevron-right"></i></a> -->
+			</div>
+			<div id="date-form">
+				<%= order_form.label :delivery_date, id: 'date_form' %>
+			  <%= order_form.date_field :delivery_date, placeholder: "Delivery Date" %>
+			</div>
 		</div>
-		<div class="orders-nav">
-			<a href="#" class="nav-left"><i class="fa fa-chevron-left"></i></a>
-			<span class="order-id">Order # 1147259704</span>
-			<a href="#" class="nav-right"><i class="fa fa-chevron-right"></i></a>
-		</div>
-		<form id="date-form">
-			<label>Delivery Date:</label>
-			<select name="date-form" id="date_form">
-				<option value="all">10/20/2015</option>
-				<option value="price">Option 2</option>
-				<option value="name">Option 3</option>
-			</select>
-		</form>
+
 		<div class="clear"></div>
-	</div>
-	<form action="#" id="single-order-form">
+
 		<div class="orders-list-table">
 			<div class="header">
 				<div class="cel"></div>
@@ -51,119 +50,23 @@
 				</div>
 				<div class="cel">Out of Stock</div>
 			</div>
+
 			<div class="order-items-block">
-				<div class="order-items-el" id="pastries">
-					<a href="#" class="order-items-toggle">Pastries <i class="fa fa-chevron-down"></i></a>
-					<div class="order-items-cont">
-						<div class="order-item">
-							<div class="cel"><a href="" class="close-button"><i class="fa fa-times"></i></a></div>
-							<div class="cel">Pear Tart</div>
-							<div class="cel">234134</div>
-							<div class="cel">Each</div>
-							<div class="cel">$5.00</div>
-							<div class="cel">
-								<div class="qty-block">
-									<div class="spin"><span class="minus"><i class="fa fa-minus"></i></span><input value="30" placeholder="Qty" class="qty_input"/><span class="plus"><i class="fa fa-plus"></i></span></div>
-								</div>
-							</div>
-							<div class="cel">$150.00</div>
-							<div class="cel"><input type="checkbox"></div>
-						</div>
-						<div class="order-item">
-							<div class="cel"><a href="" class="close-button"><i class="fa fa-times"></i></a></div>
-							<div class="cel">Fruit Tart</div>
-							<div class="cel">234134</div>
-							<div class="cel">Each</div>
-							<div class="cel">$5.00</div>
-							<div class="cel">
-								<div class="qty-block">
-									<div class="spin"><span class="minus"><i class="fa fa-minus"></i></span><input value="30" placeholder="Qty" class="qty_input"/><span class="plus"><i class="fa fa-plus"></i></span></div>
-								</div>
-							</div>
-							<div class="cel">$150.00</div>
-							<div class="cel"><input type="checkbox"></div>
-						</div>
+					<!-- This will need to be split by vendor.categories.each when inplace in model -->
+				<div class="order-items-el">
+				  <a href="#" class="order-items-toggle">All <i class="fa fa-chevron-down"></i></a>
+				  <div class="order-items-cont">
+				<%= render partial: 'line_item', collection: order_form.object.line_items, locals: { order_form: order_form } %>
 					</div>
 					<div class="order-items-count-block">
 						<div class="col1">
-							<a href="" class="cta-button white"><i class="fa fa-plus"></i> Add item</a>
+							<button class="cta-button white"><i class="fa fa-plus"></i> Add Item</button>
 						</div>
 						<div class="col2">
-							<p class="category-count">Category Count: <span class="count-val">60</span></p>
+							<p class="category-count">Category Count: <span class="count-val"><%= @order.line_items.sum(:quantity) %></span></p>
 						</div>
 						<div class="col3">
-							<p class="subtotal-count">Subtotal: <span class="count-val">$300.00</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="order-items-el" id="breads">
-					<a href="#" class="order-items-toggle">Breads <i class="fa fa-chevron-down"></i></a>
-					<div class="order-items-cont">
-						<div class="order-item">
-							<div class="cel"><a href="" class="close-button"><i class="fa fa-times"></i></a></div>
-							<div class="cel">Brioche</div>
-							<div class="cel">232134</div>
-							<div class="cel">12</div>
-							<div class="cel">$20.00</div>
-							<div class="cel">
-								<div class="qty-block">
-									<div class="spin"><span class="minus"><i class="fa fa-minus"></i></span><input value="5" placeholder="Qty" class="qty_input"/><span class="plus"><i class="fa fa-plus"></i></span></div>
-								</div>
-							</div>
-							<div class="cel">$100.00</div>
-							<div class="cel"><input type="checkbox"></div>
-						</div>
-					</div>
-					<div class="order-items-count-block">
-						<div class="col1">
-							<a href="" class="cta-button white"><i class="fa fa-plus"></i> Add item</a>
-						</div>
-						<div class="col2">
-							<p class="category-count">Category Count: <span class="count-val">5</span></p>
-						</div>
-						<div class="col3">
-							<p class="subtotal-count">Subtotal: <span class="count-val">$100.00</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="order-items-el" id="minis">
-					<a href="#" class="order-items-toggle">Minis</a>
-					<div class="order-items-count-block">
-						<div class="col1">
-							<a href="" class="cta-button white"><i class="fa fa-plus"></i> Add item</a>
-						</div>
-						<div class="col2">
-							<p class="category-count">Category Count: <span class="count-val">0</span></p>
-						</div>
-						<div class="col3">
-							<p class="subtotal-count">Subtotal: <span class="count-val">$0.00</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="order-items-el" id="other">
-					<a href="#" class="order-items-toggle">Other</a>
-					<div class="order-items-count-block">
-						<div class="col1">
-							<a href="" class="cta-button white"><i class="fa fa-plus"></i> Add item</a>
-						</div>
-						<div class="col2">
-							<p class="category-count">Category Count: <span class="count-val">0</span></p>
-						</div>
-						<div class="col3">
-							<p class="subtotal-count">Subtotal: <span class="count-val">$0.00</span></p>
-						</div>
-					</div>
-				</div>
-				<div class="order-items-total-count" id="total_count">
-					<div class="order-items-count-block">
-						<div class="col1">
-							&nbsp;
-						</div>
-						<div class="col2">
-							<p class="total-count">Total Count: <span class="count-val">65</span></p>
-						</div>
-						<div class="col3">
-							<p class="total-price">Total: <span class="count-val">$400.00</span></p>
+							<p class="subtotal-count">Subtotal: <span class="count-val"><%= order_form.object.display_total %></span></p>
 						</div>
 					</div>
 				</div>
@@ -171,10 +74,15 @@
 		</div>
 		<div class="clear"></div>
 		<div class="single-order-buttons">
-			<a href="" class="cta-button notify"><i class="fa fa-bell-o"></i> Notify customer</a>
-			<a href="" class="cta-button cancel"></i> Cancel</a>
-			<input type="submit" value="Approve Order">
+			<%= submit_tag Spree.t(:update), class: 'cta-button notify', id: 'update-button' %>
+			<%= link_to 'Cancel Order',  { action: :destroy, id: @order.id },
+			method: :delete, data: { confirm: 'Are you sure? This order will be completely deleted!' },
+			class: 'cta-button cancel'%>
+
+			<%= submit_tag "Approve Order", class: 'btn btn-primary add-to-order', id: 'approve-button' %>
+			<!-- <a href="" class="cta-button notify"><i class="fa fa-bell-o"></i> Notify customer</a> -->
 			<div class="clear"></div>
 		</div>
-	</form>
-</div>
+
+	</div>
+<% end %>
