--- a/app/views/spree/cust/orders/edit.html.erb
+++ b/app/views/spree/cust/orders/edit.html.erb
@@ -1,68 +1,92 @@
-<h1> <%= @order.vendor.name %> </h1>
-<h4><a href="<%= orders_url %>">Back to All Orders</a></h4>
-<h1> Vendor: <%= @order.vendor.name %> </h1>
-<h3> Order #<%= @order.number %> </h3>
-<h4>Order status: <%= @order.state %></h4>
-
-<div data-hook="outside_cart_form">
-	<%= form_for @order, url: order_url, method: "patch", html: { id: 'update-cart' } do |order_form| %>
-	<%= order_form.label :delivery_date %>
-	<%= order_form.date_field :delivery_date, placeholder: "Delivery Date" %>
-		<div data-hook="inside_cart_form">
-
-			<div data-hook="cart_items" class="table-responsive">
-
-				<table class="single-order">
-				  <!-- <colgroup span="7"></colgroup> -->
-				  <thead>
-				    <tr class="active" data-hook="cart_items_headers">
-				      <th class="cart-item-description-header" colspan="2"><%= Spree.t(:item) %></th>
-							<th>SKU #</th>
-				 	 		<th>Pack/Size</th>
-   					  <th class="cart-item-price-header"><%= Spree.t(:price) %></th>
-   					  <th class="cart-item-quantity-header"><%= Spree.t(:qty) %></th>
-     					<th class="cart-item-total-header"><%= Spree.t(:total) %></th>
-    					<th>Out of Stock</th>
-     					<th class="cart-item-delete-header"></th>
-    				</tr>
-  				</thead>
-
-					<tbody id="line_items" data-hook>
-						<%= render partial: 'line_item', collection: order_form.object.line_items, locals: { order_form: order_form } %>
-					</tbody>
-
-					<% if @order.adjustments.nonzero.exists? || @order.line_item_adjustments.nonzero.exists? || @order.shipment_adjustments.nonzero.exists? || @order.shipments.any? %>
-				    <tr class="cart-subtotal">
-    			  	<td colspan="4" align='right'><h5><%= Spree.t(:cart_subtotal, count: @order.line_items.sum(:quantity)) %></h5></td>
-      				<td colspan><h5><%= order_form.object.display_item_total %></h5></td>
-      				<td></td>
-    				</tr>
-    				<%= render "spree/orders/adjustments" %>
-  				<% end %>
-
-
-  				<tr class="warning cart-total">
-    				<td colspan="4" align='right'><h5><%= Spree.t(:total) %></h5></td>
-    				<td class="lead" colspan><%= order_form.object.display_total %></td>
-    				<td></td>
-  				</tr>
-				</table>
-				<!-- <a href="<%= vendor_url(@order.vendor) %>" class="new-order-button">Add New Product To Order</a> -->
-				<%= submit_tag "Add New Product To Order", class: "add-new-product-btn" %>
-        <div class="links col-md-6 navbar-form pull-right text-right" data-hook="cart_buttons">
-          <div class="form-group">
-            <%= submit_tag Spree.t(:update), class: 'btn btn-primary add-to-order', id: 'update-button' %>
-						<% if @order.state == "complete" %>
-							<%= submit_tag "Resubmit Order", class: 'btn btn-lg btn-success add-to-order', id: 'checkout-link'%>
-						<% else %>
-            	<%= submit_tag "Submit Order", class: 'btn btn-lg btn-success add-to-order', id: 'checkout-link'%>
-						<% end %>
-          </div>
-        </div>
-				<%= link_to 'Cancel Order',  { action: :destroy, id: @order.id },
-				method: :delete, data: { confirm: 'Are you sure? This order will be completely deleted!' },
-				class: 'btn btn-primary add-to-order'%>
-      </div>
-    </div>
-  <% end %>
+<div class="search-area layout2">
+	<a href="<%= orders_url %>" class="cta-link">Back to all Orders</a>
+	<div class="search-block">
+		<form id="search-form">
+			<input type="text" placeholder="Search by order#">
+			<input type="submit" value="Search">
+		</form>
+	</div>
 </div>
+
+<%= form_for ([:manage, @order]),url: order_url, method: "patch", html: { id: 'single-order-form' } do |order_form| %>
+	<div class="single-order-block">
+		<div class="search-block">
+			<div class="order-name">
+				<%= @vendor.name %>
+			</div>
+			<div class="orders-nav">
+				<!-- <a href="#" class="nav-left"><i class="fa fa-chevron-left"></i></a> -->
+				<span class="order-id">Order #<%= @order.number %></span>
+				<!-- <a href="#" class="nav-right"><i class="fa fa-chevron-right"></i></a> -->
+			</div>
+			<div id="date-form">
+				<%= order_form.label :delivery_date, id: 'date_form' %>
+			  <%= order_form.date_field :delivery_date, placeholder: "Delivery Date" %>
+			</div>
+		</div>
+
+		<div class="clear"></div>
+
+		<div class="orders-list-table">
+			<div class="header">
+				<div class="cel"></div>
+				<div class="cel">
+					<a href="" class="sort-name">Item <i class="fa fa-sort"></i></a>
+				</div>
+				<div class="cel">
+					<a href="" class="sort-name">SKU <i class="fa fa-sort"></i></a>
+				</div>
+				<div class="cel">
+					<a href="" class="sort-sku">Pack/Size <i class="fa fa-sort"></i></a>
+				</div>
+				<div class="cel">
+					<a href="" class="sort-lead_time">Price <i class="fa fa-sort"></i></a>
+				</div>
+				<div class="cel">
+					<a href="" class="sort-pack_size">Qty <i class="fa fa-sort"></i></a>
+				</div>
+				<div class="cel">
+					<a href="" class="sort-price">Total <i class="fa fa-sort"></i></a>
+				</div>
+				<div class="cel">Out of Stock</div>
+			</div>
+
+			<div class="order-items-block">
+					<!-- This will need to be split by vendor.categories.each when inplace in model -->
+				<div class="order-items-el">
+				  <a href="#" class="order-items-toggle">All <i class="fa fa-chevron-down"></i></a>
+				  <div class="order-items-cont">
+				<%= render partial: 'line_item', collection: order_form.object.line_items, locals: { order_form: order_form } %>
+					</div>
+					<div class="order-items-count-block">
+						<div class="col1">
+              <%= submit_tag "Add Item", class: "cta-button white" %>
+						</div>
+						<div class="col2">
+							<p class="category-count">Category Count: <span class="count-val"><%= @order.line_items.sum(:quantity) %></span></p>
+						</div>
+						<div class="col3">
+							<p class="subtotal-count">Subtotal: <span class="count-val"><%= order_form.object.display_total %></span></p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="clear"></div>
+		<div class="single-order-buttons">
+			<%= submit_tag Spree.t(:update), class: 'cta-button notify', id: 'update-button' %>
+			<%= link_to 'Cancel Order',  { action: :destroy, id: @order.id },
+			method: :delete, data: { confirm: 'Are you sure? This order will be completely deleted!' },
+			class: 'cta-button cancel'%>
+
+			<% if @order.state == "complete" %>
+        <%= submit_tag "Resubmit Order", class: 'btn btn-primary add-to-order', id: 'checkout-link'%>
+      <% else %>
+        <%= submit_tag "Submit Order", class: 'btn btn-primary add-to-order', id: 'checkout-link'%>
+      <% end %>
+			<!-- <a href="" class="cta-button notify"><i class="fa fa-bell-o"></i> Notify customer</a> -->
+			<div class="clear"></div>
+		</div>
+
+	</div>
+<% end %>
